# tixel

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-plz.yml
benches/: render.rs
examples/: particles.rs  rectangle.rs  snake.rs
src/: braille.rs  color.rs  half_cell.rs  lib.rs  utils.rs
