[package]
name = "tixel"
version = "0.1.1"
edition = "2024"
description = "A terminal renderer."
license = "GPL-3.0-only"
repository = "https://github.com/drewzemke/tixel"
readme = "README.md"

[dependencies]

[dev-dependencies]
anyhow = "1.0.102"
criterion = { version = "0.8.2", features = ["html_reports"] }
crossterm = "0.29.0"
rand = "0.10"

[[bench]]
name = "render"
harness = false

[profile.bench]
debug = true
